--- a/.github/workflows/env-build.yml
+++ b/.github/workflows/env-build.yml
@@ -1,25 +1,18 @@
-name: CPU Environment Build
-
-on: [push]
-
 jobs:
-  build-linux:
-    runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 5
-
+  conda-build:
+    name: Ex3 Linux
+    runs-on: "ubuntu-latest"
+    defaults:
+      run:
+        shell: bash -el {0}
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.8'
-    - name: Add conda to system path
-      run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        echo $CONDA/bin >> $GITHUB_PATH
-    - name: Install dependencies
-      run: |
-        conda env update --file environment.yml --name base
-    - name: Install additional package
-      run: conda run -n rtfm pip install --no-deps git+https://github.com/mlfoundations/tableshift.git
+      - uses: actions/checkout@v4
+      - uses: conda-incubator/setup-miniconda@v3
+        with:
+          activate-environment: rtfm
+          environment-file: environment.yml
+          python-version: 3.8
+          auto-activate-base: false
+      - run: |
+          conda info
+          conda list
